[gd_scene load_steps=3 format=3 uid="uid://d0jia6idfpero"]

[ext_resource type="Script" path="res://scripts/title_screen.gd" id="1_v5f8c"]
[ext_resource type="PackedScene" uid="uid://2gimcxckhhvr" path="res://instructions.tscn" id="2_4f0sv"]

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_v5f8c")

[node name="TitleLabel" type="Label" parent="."]
offset_left = 403.0
offset_top = 132.0
offset_right = 757.0
offset_bottom = 201.0
theme_override_font_sizes/font_size = 50
text = "Slice and Solve"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
offset_left = 469.0
offset_top = 283.0
offset_right = 693.0
offset_bottom = 355.0
theme_override_font_sizes/font_size = 36
text = "Start"

[node name="InstructionsButton" type="Button" parent="."]
offset_left = 470.0
offset_top = 373.0
offset_right = 693.0
offset_bottom = 449.0
theme_override_font_sizes/font_size = 36
text = "Instructions"

[node name="Instructions" parent="." instance=ExtResource("2_4f0sv")]
visible = false

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="InstructionsButton" to="." method="_on_instructions_button_pressed"]
[connection signal="backToTitle" from="Instructions" to="." method="_on_instructions_back_to_title"]
